--- a/index.html
+++ b/index.html
@@ -295,6 +295,8 @@
         if (!res.ok) throw new Error(res.status + ' ' + res.statusText);
         let data = await res.json();
         if (!Array.isArray(data) && Array.isArray(data.data)) data = data.data;
+        // Если получили один объект вместо массива, оборачиваем в массив
+        if (!Array.isArray(data) && data && typeof data === 'object') data = [data];
         allPrompts = (data || []).map((rec) => ({
           id: rec.id,
           prompt: rec.prompt || rec.PROMPT || rec.text || rec.body || '',
